--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	
+	
+        <meta name="description" content="Let's Encrypt announced that there is bug in CAA code. It's application for checking safety of your SSL certification.">
+        <meta name="keywords" content="SSL,Let's Encrypt,Certification">
+        <meta name="author" content="Jangwook Kim">
 
 	<title>Let's Encrypt Domain Checker | WWW.JANGWOOK.NET</title>
 
