--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	
 	
-        <meta name="description" content="Let's Encrypt announced that there is bug in CAA code. It's application for checking safety of your SSL certification.">
-        <meta name="keywords" content="SSL,Let's Encrypt,Certification">
+        <meta name="description" content="Let's Encrypt announced that there is bug in CAA code. It's application for checking safety of your SSL certificate.">
+        <meta name="keywords" content="SSL,Let's Encrypt,Certificates">
         <meta name="author" content="Jangwook Kim">
 
 	<title>Let's Encrypt Domain Checker | WWW.JANGWOOK.NET</title>
